<?xml version="1.0"?>
<package format="2">
    <!--Package Header-->
    <name>raisim</name>
    <version>0.0.2</version>
    <description>The raisim library CMake package.</description>
    <license>BSD</license>
    <url type="website">http://bitbucket.org/jhwangbo/raiSim</url>
    <maintainer email="jhwangbo@ethz.ch">Jemin Hwangbo</maintainer>
    <author email="jhwangbo@ethz.ch">Jemin Hwangbo</author>
    <!--Package Dependencies-->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>eigen</build_depend>
     <depend>roscpp</depend>
</package>
